[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gps-bridge"
version = "0.1.0"
description = "Standalone encrypted GPS receiver bridge for OpenClaw"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["gps", "openclaw", "encryption", "x25519", "bridge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "cryptography>=42.0.0",
    "click>=8.1.0",
]

[project.scripts]
gps-bridge = "gps_bridge.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",       # required by FastAPI TestClient
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gps_bridge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
